--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>A donde ir en la ciudad</title>
+    <link rel="icon" sizes="32x32" type="image/x-icon" href="images/logos/58x58.png" />
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
@@ -56,7 +57,7 @@
               <a class="page-scroll" href="#contact">Síguenos</a>
             </li>
             <li>
-              <a class="btn-primary bgLightBlue cWhite" href="/control">Inicia Sesión</a>
+              <a class="btn-primary bgLightBlue cWhite" href="control">Inicia Sesión</a>
             </li>
           </ul>
         </div>
