--- a/privacidad.html
+++ b/privacidad.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>A donde ir en la ciudad</title>
+    <link rel="icon" sizes="32x32" type="image/x-icon" href="images/logos/58x58.png" />
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
