correcciones textos index y menu publicaciones

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h2 class="section-heading cWhite">¡Encuentra los mejores lugares para salir en tu ciudad!</h2>
-            <p class="cLightGrey">Estámos disponibles para cualquier dispositivo móvil, ¡Búscanos en tu appStore!</p>
+            <p class="cLightGrey">Estámos disponibles para cualquier dispositivo móvil, ¡Búscanos en tu App Store!</p>
             <div class="badges">
               <a class="badge-link" href="#"><img src="images/google-play-badge.svg" alt=""></a>
               <a class="badge-link" href="#"><img src="images/app-store-badge.svg" alt=""></a>
@@ -131,28 +131,28 @@
             <div class="feature-item">
               <i class="icon-map bgLightBlue text-primary"></i>
               <h3>Encuentra los mejores lugares en tu area</h3>
-              <p class="text-muted">Desde bares, restaurantes, museos, cines, etc.</p>
+              <p class="text-muted">Desde Restaurantes, bares, antros, food trucks, etc.</p>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="feature-item">
               <i class="icon-calendar bgLightBlue text-primary"></i>
-              <h3>conoce las ofertas del día</h3>
-              <p class="text-muted">Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+              <h3>Conoce las ofertas del día</h3>
+              <p class="text-muted"> Las mejores ofertas de Lunes a Domingo.</p>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="feature-item">
               <i class="icon-compass bgLightBlue text-primary"></i>
               <h3>Facil de usar</h3>
-              <p class="text-muted">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="text-muted">Nunca había sido tan fácil encontrar las mejores promociones en tu ciudad.</p>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="feature-item">
               <i class="icon-emotsmile bgLightBlue text-primary"></i>
-              <h3>es gratis</h3>
-              <p class="text-muted">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <h3>Es gratis</h3>
+              <p class="text-muted">Descargala de manera gratuita.</p>
             </div>
           </div>
         </div>
